[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/buneko.png" type="Texture" id=1]
[ext_resource path="res://astronauta.gd" type="Script" id=2]
[ext_resource path="res://UI/hey.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "idle 4 frames"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.94808, 4.27632 )

[node name="astronauta" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle 4 frames"
"anims/idle 4 frames" = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -1.90735e-06 )
scale = Vector2( 7.73959, 3.04 )
shape = SubResource( 2 )

[node name="QuestionMark" type="Sprite" parent="."]
position = Vector2( -0.667419, -34.3721 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
